[package]
name = "bestow"
version = "0.1.0"
edition = "2024"
description = "A GNU stow alternative written in Rust"
license = "GPL-3.0"

[[bin]]
name = "bestow"
path = "src/main.rs"

[lib]
name = "bestow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
